Améliore le nom de la CA Carcassonne

--- a/data/institutions/ca_carcassonne_agglo.yml
+++ b/data/institutions/ca_carcassonne_agglo.yml
@@ -1,4 +1,4 @@
-name: Communauté d'agglomération de Carcassonne Agglo
+name: Communauté d'agglomération de Carcassonne
 imgSrc: img/institutions/logo_ca_carcassonne_agglo.png
 prefix: de la
 type: epci
