--- a/data/benefits/javascript/metropole-lyon-aide-covoiturage.yml
+++ b/data/benefits/javascript/metropole-lyon-aide-covoiturage.yml
@@ -1,6 +1,6 @@
 label: incitation au covoiturage
 institution: intercommunalite_metropole_lyon
-description: "La Métropole de Lyon subventionne vos covoiturages réservés depuis l'application En Covoit’Grand Lyon. Vous êtes conductrice ou conducteur ? Vous êtes indemnisé entre 1€ et 8€ par passager, selon la distance parcourue. Vous êtes passagère ou passager ? Vos trajets sont gratuits si vous avez la carte d’abonnement aux transports et vous coûtent sinon 0,50€ puis 0,10€ par kilomètre au-delà de 30 kilomètres."
+description: "La Métropole de Lyon subventionne vos covoiturages réservés depuis l’application En Covoit’Grand Lyon. Vous êtes conductrice ou conducteur ? Vous êtes indemnisé entre 1€ et 8€ par passager, selon la distance parcourue. Vous êtes passagère ou passager ? Vos trajets sont gratuits si vous avez la carte d’abonnement aux transports et vous coûtent sinon 0,50€ puis 0,10€ par kilomètre au-delà de 30 kilomètres."
 prefix: l’
 conditions_generales:
   - type: epcis
