Modifie CA pour CC. Ajoute l'accompagnement pour le Pays de la Châtaigneraie.

--- a/data/institutions/ca_pays_de_la_chataigneraie.yml
+++ b/data/institutions/ca_pays_de_la_chataigneraie.yml
@@ -1,5 +1,5 @@
-name: Communauté d'agglomération du Pays de la Châtaigneraie
-imgSrc: img/institutions/logo_ca_pays_de_la_chataigneraie.png
+name: Communauté de communes du Pays de la Châtaigneraie
+imgSrc: img/institutions/logo_cc_pays_de_la_chataigneraie.png
 prefix: de la
 type: epci
 code_siren: "248500415"
