--- a/data/benefits/javascript/cc-pays-de-la-chataigneraie-accompagnement.yml
+++ b/data/benefits/javascript/cc-pays-de-la-chataigneraie-accompagnement.yml
@@ -1,4 +1,4 @@
-label: rendez-vous d’accompagnement personnalisé tout près de chez vous
+label: rendez-vous près de chez vous pour demander vos aides
 institution: cc_pays_de_la_chataigneraie
 description: Vous avez besoin d’un accompagnement pour comprendre votre résultat de simulation et demander vos aides ? Prenez un rendez-vous avec une agente chargée d’accès aux droits, tout près de chez vous, rapidement.
 prefix: le
