--- a/data/benefits/javascript/caf-aide-nationale-bafa.yml
+++ b/data/benefits/javascript/caf-aide-nationale-bafa.yml
@@ -2,8 +2,7 @@ label: aide nationale au Brevet d'aptitude aux fonctions d'animateur (BAFA)
 institution: caf
 description:
   "La CAF vous aide à financer une partie de votre BAFA afin d'obtenir
-  une formation qualifiante d’animateur qui vous permettra de travailler dans un
-  centre de loisirs ou une colonie de vacances.
+  une formation qualifiante d’animateur.
   <br>Les étapes de la formation du BAFA sont les suivantes : <br>1) la session
   de formation générale, <br>2) le stage pratique, <br>3) la session
   d’approfondissement ou de qualification.<br>Cette aide est accessible aux
