Ajoute l'incitation covoiturage du PM Mobilités Le Mans- Sarthe.

--- a/data/institutions/le-mans-sarthe-mobilites.yml
+++ b/data/institutions/le-mans-sarthe-mobilites.yml
@@ -1,5 +1,5 @@
-name: Pôle Métropolitain Mobilités Le Mans-Sarthes
-imgSrc: img/institutions/logo_le_mans_sarthes_mobilites.png
+name: Pôle Métropolitain Mobilités Le Mans-Sarthe
+imgSrc: img/institutions/logo_le_mans_sarthe_mobilites.png
 prefix: du
 type: autre
 code_siren: "200051944"
