--- a/data/benefits/javascript/metropole-lyon-aide-covoiturage.yml
+++ b/data/benefits/javascript/metropole-lyon-aide-covoiturage.yml
@@ -1,6 +1,6 @@
 label: incitation au covoiturage du Grand Lyon
 institution: intercommunalite_metropole_lyon
-description: "La Métropole de Lyon subventionne vos covoiturages réservés depuis l’application En Covoit’Rendez-vous. Vous êtes conductrice ou conducteur ? Recevez entre 1€ et 8€ par passager selon la distance parcourue. Vous êtes passagère ou passager ? Vos trajets sont gratuits si vous avez la carte d’abonnement aux transports et vous coûtent sinon 0,50€ puis 0,10€ par kilomètre au-delà de 30 kilomètres."
+description: "La Métropole de Lyon subventionne vos covoiturages réservés depuis l’application En Covoit’ Rendez-vous. Vous êtes conductrice ou conducteur ? Recevez entre 1 € et 8 € par trajet et par passager selon la distance parcourue. Vous êtes passagère ou passager ? Vos trajets sont gratuits si vous avez la carte d’abonnement aux transports et vous coûtent sinon 0,50 € puis 0,10 € par kilomètre au-delà de 30 kilomètres."
 prefix: l’
 conditions_generales:
   - type: communes
@@ -73,7 +73,7 @@ conditions_generales:
     value: 18
 profils: []
 conditions:
-  - Télécharger l’application mobile En Covoit’Rendez-vous, opérée par Karos.
+  - Télécharger l’application mobile En Covoit’ Rendez-vous, opérée par Karos.
   - Effectuer un trajet dont la distance est comprise entre 5 et 80 kilomètres.
   - Partir ou arriver dans la Métropole de Lyon ou la communauté de communes de la vallée du Garon.
   - Effectuer un maximum de 6 trajets par jour si vous êtes conducteur et un maximum de 2 trajets par jour si vous êtes passager.
