--- a/data/benefits/javascript/artois-mobilite-aide-covoiturage.yml
+++ b/data/benefits/javascript/artois-mobilite-aide-covoiturage.yml
@@ -1,6 +1,6 @@
 label: incitation au covoiturage d'Artois Mobilités
 institution: artois-mobilites
-description: "Artois Mobilités subventionne vos covoiturages réservés depuis l’application BlablaCar Daily. Vous êtes conductrice ou conducteur ? Vous êtes indemnisé entre 2 € et 4 € par trajet et par passager selon la distance parcourue, dans la limite de 150 € par mois. Vous êtes passagère ou passager ? Bénéficiez de 2 trajets gratuits par jour."
+description: "Artois Mobilités subventionne vos covoiturages réservés depuis l’application BlablaCar Daily. Vous êtes conductrice ou conducteur ? Recevez entre 2 € et 4 € par trajet et par passager selon la distance parcourue, dans la limite de 150 € par mois. Vous êtes passagère ou passager ? Bénéficiez de 2 trajets gratuits par jour."
 prefix: l’
 conditions_generales:
   - type: communes
