--- a/data/benefits/openfisca/pass_colo.yml
+++ b/data/benefits/openfisca/pass_colo.yml
@@ -1,6 +1,6 @@
 label: Passʼcolo - une aide financière pour les départs en colo
 institution: etat
-description: Activités culturelles, sportives, rencontres... les colonies de
+description: Activités culturelles, sportives, rencontres... Les colonies de
   vacances offrent une multitude dʼexpériences enrichissantes pour les enfants
   et les jeunes. Cette aide permet de prendre en charge totalement ou
   partiellement le coût de la colonie.
@@ -8,6 +8,7 @@ prefix: le
 conditions:
   - Avoir un enfant dont lʼannée de naissance est 2013.
   - Consulter le catalogue des colos disponibles et contacter lʼorganisateur.
+  - Effectuer un séjour d'une durée minimale de 5 jours durant les vacances scolaires.
 type: float
 unit: €
 entity: individus
