refactor: fix label

--- a/data/benefits/openfisca/ars.yml
+++ b/data/benefits/openfisca/ars.yml
@@ -1,4 +1,4 @@
-blabel: allocation de rentrée scolaire
+label: allocation de rentrée scolaire
 institution: caf
 description: >
   L'allocation de rentrée scolaire (ARS) est versée, sous conditions de ressources, aux familles ayant au moins un enfant scolarisé âgé de 6 à 18 ans.
