feat: ameliore l'intégration de sentry #4481

--- a/.env.example
+++ b/.env.example
@@ -34,9 +34,12 @@ VITE_STATS_VERSION=
 
 MONGODB_URL=
 
-SENTRY_BACKEND_URL=
-SENTRY_AUTH_TOKEN=
-SENTRY_PROJECT=
+SENTRY_BACKEND_DSN=
+SENTRY_BACKEND_AUTH_TOKEN=
+SENTRY_BACKEND_PROJECT=
+SENTRY_FRONTEND_DSN=
+SENTRY_FRONTEND_AUTH_TOKEN=
+SENTRY_FRONTEND_PROJECT=
 
 SESSION_SECRET=
 
