--- a/data/benefits/javascript/intercommunalite_golfe_du_morbihan_vannes_agglomeration-aide-aux-impayes-denergie-et-eau.yml
+++ b/data/benefits/javascript/intercommunalite_golfe_du_morbihan_vannes_agglomeration-aide-aux-impayes-denergie-et-eau.yml
@@ -1,10 +1,10 @@
 label: Aide aux impayés d'énergie et eau
-institution: intercommunalite_golfe_du_morbihan_vannes_agglomeration
-description: Le CCAS de la ville de Vannes instruit le Fond Energie et Eau pour
-  le compte du département du Morbihan afin de venir en aide aux Vannetais en
-  difficulté dans le paiement de leurs factures d'énergie (électricité, bois,
-  gaz, fuel) et d'eau. Cette aide est soumise à conditions de ressources en
-  fonction de votre composition familiale.
+institution: ville-de-vannes
+description: Le Centre Communal d'Action Sociale (CCAS) de la ville de Vannes
+  instruit le Fonds Energie et Eau pour le compte du département du Morbihan,
+  afin de venir en aide aux Vannetais en difficulté dans le paiement de leurs
+  factures d'énergie (électricité, bois, gaz, fuel) et d'eau. Cette aide est
+  soumise à conditions de ressources en fonction de votre composition familiale.
 prefix: l’
 conditions_generales:
   - type: communes
@@ -13,12 +13,11 @@ conditions_generales:
   - type: difficultes_acces_ou_frais_logement
 profils: []
 conditions:
-  - Prendre rendez-vous avec le CCAS de la ville de Vannes en appelant le 02 97
-    01 65 25 ou par email action.sociale@mairie-vannes.fr.
+  - Prendre rendez-vous avec le Centre Communal d'Action Sociale (CCAS) de la ville de Vannes
+    en appelant le 02 97 01 65 25 ou par email à action.sociale@mairie-vannes.fr.
   - Consulter les conditions de ressources en cliquant sur "Voir les
     instructions détaillées".
-  - Être encore titulaire du contrat pour lequel vous faites une demande au Fond
-    Energie et Eau.
+  - Être encore titulaire du contrat pour lequel vous faites une demande au Fonds Energie et Eau.
 type: bool
 unit: €
 periodicite: ponctuelle
