ajoute une balise sur les aides financières.

--- a/data/benefits/javascript/intercommunalite_golfe_du_morbihan_vannes_agglomeration-aide-aux-impayes-denergie-et-eau.yml
+++ b/data/benefits/javascript/intercommunalite_golfe_du_morbihan_vannes_agglomeration-aide-aux-impayes-denergie-et-eau.yml
@@ -21,5 +21,5 @@ conditions:
 type: bool
 unit: €
 periodicite: ponctuelle
-link: https://www.mairie-vannes.fr/action-sociale-et-insertion
+link: https://www.mairie-vannes.fr/action-sociale-et-insertion#4_les-aides-financires
 instructions: https://www.morbihan.fr/fileadmin/Les_services/Aides_departementales/Doss/2024/24_morbihan_5_H08_FSL_eau_energie.pdf
