--- a/data/benefits/javascript/haut-de-france-aide-transports-salaries.yml
+++ b/data/benefits/javascript/haut-de-france-aide-transports-salaries.yml
@@ -2,7 +2,10 @@ label: aide au transport aux particuliers - salariés et apprentis
 institution: hauts_de_france
 description: Cette aide permet la prise en charge d'une partie des frais liés au
   trajet domicile-travail pour les salariés et les apprentis qui utilisent leur véhicule pour
-  aller travailler.
+  aller travailler. Si vous avez déjà bénéficié de cette aide, vous pouvez <a
+    target="_blank" title="Renouvellement aide aux transports aux particuliers 2024 - Nouvelle fenêtre" rel="noopener"
+    href="https://aides.hautsdefrance.fr/sub/tiers/aides/details/?sigle=ATPSR24">demander son renouvellement ici
+    </a>.
 conditions:
   - Utiliser un véhicule particulier ou un deux-roues motorisé pour la majorité
     de vos déplacements quotidiens domicile - travail.
