Met à jour l'aide de la CT de Martinique pour les étudiants.

--- a/data/benefits/javascript/martinique-aide-territoriale-etudiants.yml
+++ b/data/benefits/javascript/martinique-aide-territoriale-etudiants.yml
@@ -1,11 +1,10 @@
-label: Aide territoriale aux étudiants
+label: Aide territoriale aux étudiants et étudiantes
 institution: martinique
 description:
-  L'aide territoriale aux étudiants est une allocation annuelle non remboursable,
-  accordée en fonction des ressources du foyer, à des étudiants inscrits dans un
-  cursus post Bac jusqu'au Master. Sont pris en compte le revenu imposable à l’impôt
-  sur le revenu et le nombre de parts fiscales figurant sur l’avis d’imposition des
-  parents ou de l’étudiant s’il a fait sa propre déclaration d'impôts."
+  La Collectivité Territoriale de Martinique soutient les étudiants et étudiantes
+  dont les revenus sont modestes dans la poursuite de leur études jusqu'au niveau master en Martinique,
+  en Guadeloupe et en France héxagonale. Le montant de l'allocation annuelle dépend des ressources
+  financières du foyer de rattachement de l'étudiant.
 conditions:
   - Être de nationalité française ou ressortissant de l’un des États membres de
     l’Union Européenne.
@@ -22,14 +21,14 @@ conditions_generales:
       - "02"
   - type: quotient_familial
     operator: "<="
-    value: 28000
+    value: 28500
     period: year
 profils:
   - type: enseignement_superieur
     conditions: []
-link: https://www.spot.mq/zoom-sur/lancement-de-la-campagne-2023-2024-15-juillet-2023
-instructions: https://www.spot.mq/sites/default/files/Documents/REGLEMENT_AidesEtudiantsEleves_extrait.pdf#page=4
-teleservice: https://www.demarches-simplifiees.fr/commencer/ctm-demande-ate-2023-2024
+link: https://www.spot.mq/zoom-sur/lancement-de-la-campagne-2024-2025-26-juillet-2024
+instructions: https://www.spot.mq/trouver-un-dispositif/aide-territoriale-aux-etudiants-ate
+teleservice: https://ct-martinique-production.mgcloud.fr/account-management/ctmartinique-demandeurs/ux/#/login?redirectTo=https:%2F%2Fct-martinique-production.mgcloud.fr%2Faides%2F%23%2Fctmartinique%2Fconnecte%2Ftiers-selection&jwtKey=jwt-ctmartinique-portail-depot-demande-aides&footer=https:%2F%2Fct-martinique-production.mgcloud.fr%2Faides%2F%23%2Fctmartinique%2Fmentions-legales,Mentions%20l%C3%A9gales,_self;https:%2F%2Fct-martinique-production.mgcloud.fr%2Faides%2F%23%2Fctmartinique%2Fcontact-page,Nous%20contacter,_self
 type: float
 unit: €
 montant: 2500
